--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="Bridgelake Associate" content="">
 
-		<title>Bridgelake Associate</title>
+		<title>Bridgelake Associates</title>
 
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css">
+		<!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
 		<link rel="stylesheet" type="text/css" href="css/fullpage-slider.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 
 	<body>
@@ -27,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Bridgelake Associate</a>
+                <a class="navbar-brand" href="index.html">Bridgelake Associates</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,8 +76,8 @@
                 <div class="fill" style="background-image:url('img/bus1.jpg');"></div>
                 <div class="container">
                     <div class="carousel-caption text-center">
-                        <h1>Bridgelake Associate</h1>
-                        <p class="subhead">
+                        <h1>Bridgelake Associates</h1>
+                        <p class="slider-subhead">
                         Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks
                         </p>
                         <a class="btn btn-large btn-primary" href="#">Sign up today</a>
@@ -87,8 +88,8 @@
                 <!-- Set the second background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/bus2.jpg');"></div>
                 <div class="carousel-caption">
-                    <h1>We are Bridgelake Associate</h1>
-                     <p class="subhead">
+                    <h1>We are Bridgelake Associates</h1>
+                     <p class="slider-subhead">
                     Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks
                     </p>
                 </div>
@@ -121,7 +122,7 @@
                         <div class="element-line">
                             <div class="item_left">
                                 <div class="media">
-                                    <div class="media-body">
+                                    <div class="subhead">
 						                  Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin
                                     </div>
                                 </div>
@@ -132,7 +133,7 @@
                         <div class="element-line">
                             <div class="item_right">
                                 <div class="media">
-                                    <div class="media-body">
+                                    <div class="subhead" style="margin-bottom:75px;">
                                           Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin
                                     </div>
                                 </div>
@@ -157,9 +158,8 @@
                     <span class="Awsubhead">Multi-stage distribution system</span>
                     <span class="line big"></span>
                     </div>
-                    <!-- Parallax title --><br>
-
-
+                    <!-- Parallax title -->
+                    <br>
                         <!-- Parallax content -->
                         <div class="parallax-content">
                             <div class="cart">
@@ -168,9 +168,11 @@
                                         <span><img src="img/man1.png" class="img-responsive"></span>
                                         <p>&nbsp;</p>
 
-                                        <p style="color:#ffffff;">Source: Customer Equity: Building and Managing Relationships As Valuable Assets. Robert C. Blattberg, Gary Getz & Jacquelyn S. Thomas | Harvard Business School Press.</p> <br>
-<br>
-
+                                        <p style="color:#ffffff;">
+                                        Source: Customer Equity: Building and Managing Relationships As Valuable Assets. Robert C. Blattberg, Gary Getz & Jacquelyn S. Thomas | Harvard Business School Press.
+                                        </p>
+                                        <br>
+                                        <br>
                                     </div>
                                 </div>
                             </div>
@@ -319,9 +321,9 @@
 
 	<script src="js\jquery-2.1.4.min.js"></script> 
     <script src="js\jquery.parallax-1.1.3.js"></script>
-	<script src="js\scripts.js"></script>
 	<script src="js\bootstrap.js"></script> 
     <script src="js\smoothscroll.js"></script>
+    <script src="js\scripts.js"></script>
 	
 	
 </body>
