--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -115,32 +115,13 @@
 	<!-- Page Content -->
 	<section class="section-content">
     	<div class="container">
-        	<div class="section-title text-center">    
-				<h1 class="heading">I'm serious as a heart attack</h1>
-				<div class="row">
-					<div class="col-md-6">
-                        <div class="element-line">
-                            <div class="item_left">
-                                <div class="media">
-                                    <div class="subhead">
-						                  Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-					</div>
-					<div class="col-md-6">
-                        <div class="element-line">
-                            <div class="item_right">
-                                <div class="media">
-                                    <div class="subhead" style="margin-bottom:75px;">
-                                          Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin Look, just because I don't be givin' no man a foot massage don't make it right for Marsellus to throw Antwone into a glass motherfuckin' house, fuckin' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, 'cause I'll kill the motherfucker, know what I'm sayin
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-				</div>
+        	<div class="section-title text-center">  
+				<h1 class="heading">Building Customer Equity in the Age of Technology</h1>            
+                    <div class="subhead" style="margin-bottom:60px;">
+    	               Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies. This sophistication will mean companies will start generating data from consumers. Bridgelake Associates understands what most companies will be experiencing and it is well prepared to help them navigate this hurdle.  We partner with companies by providing management consulting and data analytics tools to help them understand their customers. 
+                       <br>
+                       <a href="contact.html">Contact Us to learn more...</a>
+                </div>										
         	</div>
         </div>
     </section>
@@ -152,12 +133,8 @@
             <div class="section-content">
                 <div class="container text-center">
                     <!-- Parallax title -->
-                    <h1 style="color:white;">Brand Equity vs Customer Equity</h1>
-                    <div>
-                    <span class="line big"></span>
-                    <span class="Awsubhead">Multi-stage distribution system</span>
-                    <span class="line big"></span>
-                    </div>
+                    <h1 class="heading" style="color:white;">Brand Equity vs Customer Equity</h1>
+                    
                     <!-- Parallax title -->
                     <br>
                         <!-- Parallax content -->
@@ -186,12 +163,12 @@
 
 
 
-    <section class="section-content blue-bg">
+    <section class="section-content blue-bg" id="contact">
 		<div class="parallax-background-color-contact">
 			<div class="container">
 				<!-- Section title -->
 				<div class="section-title text-center" id="contact">
-					<h1 class="heading">Contact Us</h1>
+					<h1 class="heading" style="color:black">Contact Us</h1>
 					<div>
 						
 						<span class="subhead">
@@ -315,7 +292,7 @@
 				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
 				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
 	        </div>
-	        &copy; Bridgelake Associate Copyright 2015 Indigo 
+	        &copy; Bridgelake Associate Copyright 2015 
 	    </footer>
 	
 
