--- a/services.html
+++ b/services.html
@@ -185,7 +185,7 @@
 				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
 				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
 	        </div>
-	        &copy; Bridgelake Associates Copyright 2015 Indigo 
+	        &copy; Bridgelake Associates Copyright 2015 
 	    </footer>
 	</section>
 
