Fixed Indspec Images
Images should all be 1280x720

--- a/indspec.html
+++ b/indspec.html
@@ -117,7 +117,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/indspec/tele5.jpg" class="img-responsive" alt="">
+                        <img src="img/indspec/tele.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Telecommunications</h4>
