--- a/partners.html
+++ b/partners.html
@@ -61,14 +61,33 @@
         <!-- /.container -->
     </nav>
 
-    <section class="section-content">
-        <h1 class="text-center" style="font-size:70px; margin-top:50px; margin-bottom:50px;"><strong>Our Partners</strong></h1>
-        <img src="img/comingsoon.png" class="img-responsive img-centered">
+    <section class="section-content" style="padding-top:40px; padding-bottom:40px;">
+        <div class="container">
+            <div class="section-title text-center">    
+                <h1 class="heading">Our Partners</h1>     
+                <hr> 
+            </div>                               
+        </div>
+    </section>
+
+    <section class="section-content" style="padding-top:80px; padding-bottom:80px;">
+        <div class="container">
+            <div class="section-title text-center">    
+                
+                <img src="img/tedx.png"> 
+                <p class="subhead">
+                    TEDxAccra’s mission of “Ideas worth Spreading” reaches far beyond the conference and video series, encompassing a variety of projects and initiatives that leverage the power of ideas. The main aim of organizing is to create spaces for hope and possibility for the future leaders of Ghana.
+                    <br>
+                    <a href="http://tedxaccra.org">click here for more information</a>
+               </p>
+
+            </div>                               
+        </div>
     </section>
    
     <!-- Footer -->
     <section>
-	    <footer class="text-center navbar-fixed-bottom">
+	    <footer class="text-center navbar-bottom">
 	    	<div class="social-icon">
 	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
 				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
