--- a/services.html
+++ b/services.html
@@ -61,24 +61,28 @@
         <!-- /.container -->
     </nav>
 
+    <section class="section-content" style="margin-top:40px; margin-bottom:40px;">
+        <div class="container">
+            <div class="section-title text-center">    
+                <h1 class="heading">Four Pillars of Our Services</h1>  
+                <hr>     
+            </div>
+        </div>
+    </section>
+
     <section class="section-content">
     <div id="one-parallax" class="parallax" style="background-image: url('img/services.jpg');" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20">
         <div>
             <div class="section-content">
                 <div class="container text-center">
                     <!-- Parallax title -->
-                                        <br>
-                                        <br>   
-                                        <br>    
-
-                    <h1 class="heading">Four Pillars of Our Services</h1>    
-
+                                         
                         <!-- Parallax content -->
                         <div class="parallax-content">
                             <div class="cart">
                                 <div class="cart_container">
                                     <div class="row">
-                                    <img src="img/servcon.png" >
+                                    <img src="img/servcon1.png" class="img-centered">
                                         <br>                                      
                                     </div>
                                 </div>
@@ -100,11 +104,11 @@
 
                         <h1><strong>Consulting Services</strong></h1>
                         <p class="subhead">
-						Bridgelake Associates provides companies in Ghana with management consulting services. Our services include strategy consulting, mergers and acquisitions. Our analytics department helps companies to stay competitive and provide solutions to help them to be high performance.       
+						 Bridgelake Associates provides companies in Ghana with management consulting services. Our   services include strategy consulting, mergers and acquisitions. Our analytics department helps companies to stay competitive and provide solutions to help them to be high performance.       
                         </p>               
 					</div>
 					<div class="col-md-4">
-						<img src="img/servcon2.png" class="img-responsive" style="padding:50px;">
+						<img src="img/servcon2.png" class="img-responsive img-centered" style="padding:50px;" height="300px" width="300px">
 					</div>
 				</div>
         	</div>
@@ -117,13 +121,13 @@
                 
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="img/servcon3.png" class="img-responsive" style="padding:50px;">
+                        <img src="img/servcon.png" class="img-responsive img-centered" style="padding:50px;" height="300px" width="500px">
                     </div>
                     <div class="col-md-8" style="margin-top:75px; margin-bottom:75px;">
 
                         <h1><strong>Data Management Platform</strong></h1>
                         <p class="subhead">
-                        BL Assoc. offers database design and management services to help your business grow and to create efficiency in your daily operations. From modeling, custom database design, we have the expertise to deliver secure data management and security for your company or organization. Our database team will take the time to learn about your business and the your unique data management needs
+                        Bridgelake Associates offers database design and management services to help your business grow and to create efficiency in your daily operations. From modeling, custom database design, we have the expertise to deliver secure data management and security for your company or organization. Our database team will take the time to learn about your business and the your unique data management needs
                         </p>
                     </div>
                 </div>
@@ -141,11 +145,11 @@
                         <h1><strong>Customer/Volunteer Analytics & Insights Platform</strong></h1>
 
                         <p class="subhead">
-                        Bridgelake Assoc. seeks to evaluate data, give valuable insights to our clients, develop predictive and discovery models, reports.
+                        Bridgelake Associates seeks to evaluate data, give valuable insights to our clients, develop predictive and discovery models, reports. 
                         </p>
                     </div>
                     <div class="col-md-4">
-                        <img src="img/servcon4.png" class="img-responsive" style="padding:50px;">
+                        <img src="img/servcon4.png" class="img-responsive img-centered" style="padding:50px;" height="300px" width="300px">
                     </div>
                 </div>
             </div>
@@ -157,19 +161,17 @@
             <div class="section-title text-center">                  
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="img/servcon6.png" class="img-responsive" style="padding:50px;">
+                        <img src="img/servcon6.png" class="img-responsive img-centered" style="padding:50px;" height="200px" width="500px">
                     </div>
                     <div class="col-md-8" style="margin-top:75px; margin-bottom:75px;">
 
                         <h1><strong>Big Data Analytics & Cloud Infrastructure</strong></h1>
 
                         <p class="subhead">
-
-                        BL Assoc. provides insights, patterns, and unknown correlations, market trends on large data sets containing variety of data types/structure and from all sorts of devices or industrial machines.
-                        <br>
+                        Bridgelake Associates provides insights, patterns, and unknown correlations, market trends on large data sets containing variety of data types/structure and from all sorts of devices or industrial machines.
                         We help/advice companies who seek to migrate from Old Data Warehouses to the Hadoop Architecture for analytics.
-                        <br>
-                        Our Big Data consultants will take the time to understand your needs as a company or organization.
+                        Our Big Data consultants will take the time to understand your needs as a company or organization
+
                         </p>
                     </div>
                 </div>
