Removing container class

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/new1.jpg');"></div>
-                <div class="container">
+                <div class="">
                     <div class="carousel-caption text-center">
                         <h1>Bridgelake Associates</h1>
                         <p class="slider-subhead">
