--- a/index.html
+++ b/index.html
@@ -74,42 +74,39 @@
             <div class="item active">
                 <!-- Set the first background image using inline CSS below. -->
                 <div class="fill" style="background-image:url('img/new1.jpg');">
-                <div class="carousel-caption">
-                    <h1>Bridgelake Associates</h1>
-                    <p class="slider-subhead">
-                    This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies.
-                    Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
-                    </p>
-                    <a class="btn btn-large btn-primary" href="#">Learn More</a>
-                </div> </div>
-<!--                 <div class="carousel-caption">
-                    <h1>Bridgelake Associates</h1>
-                    <p class="slider-subhead">
-                    This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies.
-                    Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
-                    </p>
-                    <a class="btn btn-large btn-primary" href="#">Learn More</a>
-                </div>  -->
+                    <div class="carousel-caption">
+                        <h1>Bridgelake Associates</h1>
+                        <p class="slider-subhead">
+                        This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies.
+                        Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
+                        </p>
+                        <a class="btn btn-large btn-primary" href="#">Learn More</a>
+                    </div> 
+                </div>
+
             </div>
             <div class="item">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/new2.jpg');"></div>
-                <div class="carousel-caption">
-                    <h1>We are Bridgelake Associates</h1>
-                     <p class="slider-subhead">
-                    Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
-                    </p>
+                <div class="fill" style="background-image:url('img/new2.jpg');">
+                    <div class="carousel-caption">
+                        <h1>We are Bridgelake Associates</h1>
+                         <p class="slider-subhead">
+                        Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
+                        </p>
+                    </div>
                 </div>
+
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill" style="background-image:url('img/bus2.jpg');"></div>
-                <div class="carousel-caption">
-                    <h1>This is Bridgelake Associates</h1>
-                     <p class="slider-subhead">
-                    This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies. 
-                    Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
-                    </p>
+                <div class="fill" style="background-image:url('img/bus2.jpg');">
+                    <div class="carousel-caption">
+                        <h1>This is Bridgelake Associates</h1>
+                         <p class="slider-subhead">
+                        This has led to the increase in the contribution of internet to the GDP of various countries on the continent. Rising incomes, high level of urbanization, and tech savvy young Africans will drive consumption and growth of the various economies. 
+                        Africa is quickly going digital due to rapid urbanization and strong economic growth. As such there is a growing wave of innovation from large corporations as well as up and coming startups, launching new web-based businesses. This has led to the increase in the contribution of internet to the GDP of various countries on the continent.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
