--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <section class="section-content blue-bg box-inset-top ">
         <div class="container">
             <div class="section-title text-center">  
-                <h2 class="heading" style="color:white;">Services</h2> 
+                <h2 class="heading-white">Services</h2> 
                 <div class=" line line-blue"></div>
 
                 <div class="container" style="color:white;">
@@ -207,8 +207,8 @@
             <div class="section-content">
                 <div class="container text-center">
                     <!-- Parallax title -->
-                    <h2 class="heading" style="color:white;">Brand Equity vs Customer Equity</h2>
-                    <hr class="light">
+                    <h2 class="heading-white">Brand Equity vs Customer Equity</h2>
+                    <div class="line line-transparent"></div>
                     
                     <!-- Parallax title -->
                     <br>
@@ -243,11 +243,11 @@
 			<div class="container">
 				<!-- Section title -->
 				<div class="section-title text-center" id="contact">
-					<h2 class="heading" style="color:black">Contact Us</h2>
-                    <hr>
+					<h2 class="heading-white">Contact Us</h2>
+                    <div class="line line-blue"></div>
 					<div>
 						
-						<span class="subhead">
+						<span class="subhead-white">
 							If you have any questions for us please fill out this form and we will get back to you.
 						</span> 
 						<br>
@@ -269,7 +269,7 @@
 										name="name" placeholder="Enter your name" required="" type="text">
 									</div>
 									<!-- Form group -->
-
+ 
 									<!-- Form group -->
 									<div class="form-group">
 										<label for="email">Email</label> <input class=
