--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 						<div class="row">
 							<div class="col-md-12 text-center">
 								<div class="action form-button medium">
-									<button class="btn btn-success btn-lg">Send</button>
+									<button class="btn view-more">Send</button>
 								</div>
 							</div>
 						</div>
@@ -364,9 +364,9 @@
     
 	    <footer class="text-center">
 	    	<div class="social-icon">
-	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
+	    		<a href="#" target="_blank"> <i class="fa fa-fw fa-facebook fa-3x"></i> </a>
+				<a href="#" target="_blank"> <i class="fa fa-fw fa-twitter fa-3x"></i> </a>
+				<a href="#" target="_blank"> <i class="fa fa-fw fa-linkedin-square fa-3x"></i> </a>	                   	                
 	        </div>
 	        &copy; Bridgelake Associate Copyright 2015 
 	    </footer>
