Services page done

--- a/services.html
+++ b/services.html
@@ -61,38 +61,17 @@
         <!-- /.container -->
     </nav>
 
-    <section class="section-content" style="margin-top:40px; margin-bottom:40px;">
+    <section class="page-title" style="background-image: url('img/services.jpg');">
         <div class="container">
             <div class="section-title text-center">    
-                <h1 class="heading">Four Pillars of Our Services</h1>  
-                <hr>     
+                <h1 class="heading">Our Services</h1>  
+                <div class="line line-transparent"></div>   
             </div>
         </div>
+        <div class="overlay"></div>
     </section>
 
-    <section class="section-content">
-    <div id="one-parallax" class="parallax" style="background-image: url('img/services.jpg');" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20">
-        <div>
-            <div class="section-content">
-                <div class="container text-center">
-                    <!-- Parallax title -->
-                                         
-                        <!-- Parallax content -->
-                        <div class="parallax-content">
-                            <div class="cart">
-                                <div class="cart_container">
-                                    <div class="row">
-                                    <img src="img/servcon1.png" class="img-centered">
-                                        <br>                                      
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Parallax content -->
-                </div>
-            </div>
-        </div>
-    </div>
+
 </section>
 
 	<!-- Page Content -->
@@ -100,10 +79,10 @@
     	<div class="container">
         	<div class="section-title text-center">    			
 				<div class="row">
-					<div class="col-md-8" style="margin-top:75px; margin-bottom:75px;">
+					<div class="col-md-8">
 
-                        <h1><strong>Consulting Services</strong></h1>
-                        <p class="subhead">
+                        <h2 class="heading-white">Consulting Services</h2>
+                        <p class="subhead-white">
 						 Bridgelake Associates provides companies in Ghana with management consulting services. Our   services include strategy consulting, mergers and acquisitions. Our analytics department helps companies to stay competitive and provide solutions to help them to be high performance.       
                         </p>               
 					</div>
@@ -123,9 +102,9 @@
                     <div class="col-md-4">
                         <img src="img/servcon.png" class="img-responsive img-centered" style="padding:50px;" height="300px" width="500px">
                     </div>
-                    <div class="col-md-8" style="margin-top:75px; margin-bottom:75px;">
+                    <div class="col-md-8">
 
-                        <h1><strong>Data Management Platform</strong></h1>
+                        <h2 class="heading">Data Management Platform</h2>
                         <p class="subhead">
                         Bridgelake Associates offers database design and management services to help your business grow and to create efficiency in your daily operations. From modeling, custom database design, we have the expertise to deliver secure data management and security for your company or organization. Our database team will take the time to learn about your business and the your unique data management needs
                         </p>
@@ -140,12 +119,12 @@
             <div class="section-title text-center">    
                 
                 <div class="row">
-                    <div class="col-md-8" style="margin-top:75px; margin-bottom:75px;">
+                    <div class="col-md-8">
 
-                        <h1><strong>Customer/Volunteer Analytics & Insights Platform</strong></h1>
+                        <h2 class="heading-white">Customer/Volunteer Analytics & Insights Platform</h2>
 
-                        <p class="subhead">
-                        Bridgelake Associates seeks to evaluate data, give valuable insights to our clients, develop predictive and discovery models, reports. 
+                        <p class="subhead-white">
+                        Bridgelake Associates seeks to evaluate data, give valuable insights to our clients, develop predictive and discovery models, reports.
                         </p>
                     </div>
                     <div class="col-md-4">
@@ -163,9 +142,9 @@
                     <div class="col-md-4">
                         <img src="img/servcon6.png" class="img-responsive img-centered" style="padding:50px;" height="200px" width="500px">
                     </div>
-                    <div class="col-md-8" style="margin-top:75px; margin-bottom:75px;">
+                    <div class="col-md-8">
 
-                        <h1><strong>Big Data Analytics & Cloud Infrastructure</strong></h1>
+                        <h2 class="heading">Big Data Analytics & Cloud Infrastructure</h2>
 
                         <p class="subhead">
                         Bridgelake Associates provides insights, patterns, and unknown correlations, market trends on large data sets containing variety of data types/structure and from all sorts of devices or industrial machines.
@@ -180,16 +159,14 @@
     </section>
    
     <!-- Footer -->
-    <section>
-	    <footer class="text-center">
-	    	<div class="social-icon">
-	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
-	        </div>
-	        &copy; Bridgelake Associates Copyright 2015 
-	    </footer>
-	</section>
+    <footer class="text-center">
+    	<div class="social-icon">
+    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
+			<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
+			<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
+        </div>
+        &copy; Bridgelake Associates Copyright 2015 
+    </footer>
 
 	<script src="js\jquery-2.1.4.min.js"></script> 
     <script src="js\jquery.parallax-1.1.3.js"></script>   
