--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
         </div>
     </section>
 
-    <section class="section-content">
+    <section class="parallax-section">
     <div id="one-parallax" class="parallax" style="background-image: url('img/separator2.jpg');" data-stellar-background-ratio="0.6" data-stellar-vertical-offset="20">
         <div>
             <div class="section-content">
