--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,10 @@
             <div class="container">
                 <!-- Section title -->
                 <div class="section-title text-center" id="contact">
-                    <h1 class="heading" style="color:black">Contact Us</h1>
+                    <h2 class="heading-white">Contact Us</h2>
                     <div>
                         
-                        <span class="subhead">
+                        <span class="subhead-white">
                             If you have any questions for us please fill out this form and we will get back to you.
                         </span> 
                         <br>
@@ -148,7 +148,7 @@
     <!-- Map Section -->
     <section style="padding-top:40px; padding-bottom:80px;">
         <div class="section-title text-center">
-            <h1 class="heading">Our Locations</h1>
+            <h2 class="heading">Our Locations</h2>
             <span class="subhead">You can now contact us at any of our locations in the United States or Ghana.</span>
         </div>  
 
