--- a/index.html
+++ b/index.html
@@ -335,24 +335,21 @@
     	<div class="container">
     		<div class="row text-center">
     			<div class="col-md-6">
-    				<h3>United States</h3>
+    				<h3>Office Location 1:</h3>
     				<p>
     					12372 Ivywood St. NW
     					<br>
     					Coon Rapids MN, 55433
-    					<br>
-    					Phone: +1 123 456 7890 
+
     				</p>
     				
     			</div>
     			<div class="col-md-6">
-    				<h3>Africa</h3>
+    				<h3>Office Location 2:</h3>
     				<p>
-    					1234 Mystreet Cir. SE
+    					28 Church Crescent Street
     					<br>
-    					Accra Ghana, 6546987
-    					<br>
-    					Phone: +1 123 456 7890 
+    					North Labone, Ghana 6546987   					
     				</p>
     				
     			</div>
