--- a/indspec.html
+++ b/indspec.html
@@ -63,11 +63,12 @@
     </nav>
 
 
-    <section class="section-content" style="padding-top:80px; padding-bottom:80px;">
+    <section class="section-content">
         <div class="container">
             <div class="section-title text-center">    
-                <h1 class="heading">Industry Specialization</h1>     
-                <hr>  
+                <h1 class="heading">Industry Specialization</h1>  
+                <div class="line line-white"></div>   
+                
                 <p class="subhead">
                     Bridgelake Associates provides management consulting using data analytics tools. We provide business intelligence, predictive analytics and data discovery for companies that want to have better insights into their data.  We provide cloud based analytics consulting through advisory services, big data analytics, dashboards and algorithms.  We use various and current big data analytic tools to provide unparalleled insights to companies in various industries.
                </p>
@@ -234,7 +235,7 @@
 
    
     <!-- Footer -->
-    <section>
+
 	    <footer class="text-center">
 	    	<div class="social-icon">
 	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
@@ -243,7 +244,7 @@
 	        </div>
 	        &copy; Bridgelake Associates Copyright 2015 
 	    </footer>
-	</section>
+
 
         <!-- Portfolio Modal 1 -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
