--- a/about.html
+++ b/about.html
@@ -66,18 +66,19 @@
     
     <section class="section-content">
         <div class="container">
-            <div class="section-title text-center" style="padding-top:40px; padding-bottom:80px;">  
-                <h1 class="heading">About Bridgelake Associates</h1>                                                
+            <div class="section-title text-center">  
+                <h1 class="heading">About Bridgelake Associates</h1>   
+                <div class="line line-white"></div>                                              
             </div>
         </div>
     </section>
 
-    <ol class="breadcrumb text-center">
+<!--     <ol class="breadcrumb text-center">
         <li><a href="#">Company Objective</a></li>
         <li><a href="#">Management Team</a></li>
-    </ol>
+    </ol> -->
 
-    <section class="section-content text-center" style="padding-top:80px; padding-bottom:80px;">
+    <section class="section-content text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -106,7 +107,7 @@
                 <div class="container">
                     <!-- Parallax title -->
                     <h1 class="heading text-center" style="color:white;">Our Values</h1>      
-                    <hr class="light">             
+                    <div class="line line-white"></div>               
                     <!-- Parallax title -->
                     <br>
                         <!-- Parallax content -->
@@ -156,7 +157,7 @@
         <div class="container">
             <div class="section-title text-center" style="padding-bottom:80px;">  
                 <h1 class="heading">Management Team</h1>     
-                <hr>                                          
+                <div class="line line-white"></div>                                            
             </div> 
         
             <div class="row">
@@ -252,7 +253,6 @@
     </section>
    
     <!-- Footer -->
-    <section>
 	    <footer class="text-center navbar-bottom">
 	    	<div class="social-icon">
 	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
@@ -261,7 +261,7 @@
 	        </div>
 	        &copy; Bridgelake Associates Copyright 2015
 	    </footer>
-	</section>
+	
 
 	<script src="js\jquery-2.1.4.min.js"></script> 
     <script src="js\jquery.parallax-1.1.3.js"></script>   
