--- a/partners.html
+++ b/partners.html
@@ -61,16 +61,31 @@
         <!-- /.container -->
     </nav>
 
-    <section class="section-content" style="padding-top:40px; padding-bottom:40px;">
+    <section class="section-content">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">Our Partners</h1>     
-                <hr> 
+                <div class="line line-white"></div>   
             </div>                               
         </div>
     </section>
 
-    <section class="section-content" style="padding-top:80px; padding-bottom:80px;">
+    <section class="section-content">
+        <div class="container">
+            <div class="section-title text-center">    
+                
+                <img src="img/tedx.png"> 
+                <p class="subhead">
+                    TEDxAccra’s mission of “Ideas worth Spreading” reaches far beyond the conference and video series, encompassing a variety of projects and initiatives that leverage the power of ideas. The main aim of organizing is to create spaces for hope and possibility for the future leaders of Ghana.
+                    <br>
+                    <a href="http://tedxaccra.org">click here for more information</a>
+               </p>
+
+            </div>                               
+        </div>
+    </section>
+
+    <section class="section-content">
         <div class="container">
             <div class="section-title text-center">    
                 
@@ -86,16 +101,16 @@
     </section>
    
     <!-- Footer -->
-    <section>
-	    <footer class="text-center navbar-bottom">
-	    	<div class="social-icon">
-	    		<a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
-				<a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>	                   	                
-	        </div>
-	        &copy; Bridgelake Associates Copyright 2015
-	    </footer>
-	</section>
+  
+ <!-- Footer -->
+    <footer class="text-center">
+        <div class="social-icon">
+            <a href="#" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a>
+            <a href="#" target="_blank"> <i class="fa fa-twitter fa-3x"></i> </a>
+            <a href="#" target="_blank"> <i class="fa fa-linkedin-square fa-3x"></i> </a>                                       
+        </div>
+        &copy; Bridgelake Associates Copyright 2015 
+    </footer>
 
 	<script src="js\jquery-2.1.4.min.js"></script> 
     <script src="js\jquery.parallax-1.1.3.js"></script>   
