Header Sections, animations and tweaks

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.html" class="active-menu">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -62,13 +62,21 @@
     </nav>
 
 
+    <section class="page-title" style="background-image: url('https://images.unsplash.com/photo-1453873623425-04e3561289aa?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375');">
+        <div class="container">
+            <div class="section-title text-center">    
+                <h1 class="heading">Contact Us</h1>  
+                <div class="line line-transparent"></div>   
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </section>
 
     <section class="section-content blue-bg" id="contact" style="padding-top:40px; padding-bottom:80px;">
         <div class="parallax-background-color-contact">
             <div class="container">
                 <!-- Section title -->
                 <div class="section-title text-center" id="contact">
-                    <h2 class="heading-white">Contact Us</h2>
                     <div>
                         
                         <span class="subhead-white">
@@ -134,7 +142,7 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <div class="action form-button medium">
-                                    <button class="btn btn-success btn-lg">Send</button>
+                                    <button class="btn view-more">Send</button>
                                 </div>
                             </div>
                         </div>
