--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html" class="active-menu">Home</a>
                     </li>
                     <li>
                         <a href="services.html">Services</a>
@@ -52,7 +52,7 @@
                         <a href="about.html">About Us</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -238,8 +238,8 @@
 
 
 
-    <section class="section-content blue-bg box-inset-bottom" id="contact">
-		<div class="parallax-background-color-contact">
+    <section class="contact-section blue-bg box-inset-bottom" id="contact">
+		<div class="contact-form">
 			<div class="container">
 				<!-- Section title -->
 				<div class="section-title text-center" id="contact">
@@ -319,6 +319,18 @@
 				</div>
 			</div>
 		</div>
+        <ul class="bg-squares">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
 	</section>
 
     <!-- Map Section -->
