--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
                         <a href="partners.html">Our Partners</a>
                     </li>
                     <li>
-                        <a href="news.html">News</a>
+                        <a href="news.html" class="active-menu">News</a>
                     </li>
                     <li>
                         <a href="about.html">About Us</a>
@@ -61,13 +61,14 @@
         <!-- /.container -->
     </nav>
 
-    <section class="section-content">
+    <section class="page-title" style="background-image: url('img/services.jpg');">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">News</h1>  
-                <div class="line line-white"></div>       
+                <div class="line line-transparent"></div>   
             </div>
         </div>
+        <div class="overlay"></div>
     </section>
 
      <section class="section-content">
