--- a/partners.html
+++ b/partners.html
@@ -43,7 +43,7 @@
                         <a href="indspec.html">Industry Specialization</a>
                     </li>
                     <li>
-                        <a href="partners.html">Our Partners</a>
+                        <a href="partners.html" class="active-menu">Our Partners</a>
                     </li>
                     <li>
                         <a href="news.html">News</a>
@@ -60,14 +60,14 @@
         </div>
         <!-- /.container -->
     </nav>
-
-    <section class="section-content">
+    <section class="page-title" style="background-image: url('img/services.jpg');">
         <div class="container">
             <div class="section-title text-center">    
-                <h1 class="heading">Our Partners</h1>     
-                <div class="line line-white"></div>   
-            </div>                               
+                <h1 class="heading">Our Partners</h1>  
+                <div class="line line-transparent"></div>   
+            </div>
         </div>
+        <div class="overlay"></div>
     </section>
 
     <section class="section-content">
