--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="services.html" class="active-menu">Services</a>
                     </li>
                     <li>
                         <a href="indspec.html">Industry Specialization</a>
