--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <a href="news.html">News</a>
                     </li>
                     <li>
-                        <a href="about.html">About Us</a>
+                        <a href="about.html" class="active-menu">About Us</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact Us</a>
@@ -64,13 +64,14 @@
 
 
     
-    <section class="section-content">
+    <section class="page-title" style="background-image: url('img/services.jpg');">
         <div class="container">
-            <div class="section-title text-center">  
-                <h1 class="heading">About Bridgelake Associates</h1>   
-                <div class="line line-white"></div>                                              
+            <div class="section-title text-center">    
+                <h1 class="heading">About Us</h1>  
+                <div class="line line-transparent"></div>   
             </div>
         </div>
+        <div class="overlay"></div>
     </section>
 
 <!--     <ol class="breadcrumb text-center">
