--- a/indspec.html
+++ b/indspec.html
@@ -41,7 +41,7 @@
                         <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="indspec.html">Industry Specialization</a>
+                        <a href="indspec.html" class="active-menu">Industry Specialization</a>
                     </li>
                     <li>
                         <a href="partners.html">Our Partners</a>
@@ -61,13 +61,19 @@
         </div>
         <!-- /.container -->
     </nav>
-
-
-    <section class="section-content">
+    <section class="page-title" style="background-image: url('img/services.jpg');">
         <div class="container">
             <div class="section-title text-center">    
                 <h1 class="heading">Industry Specialization</h1>  
-                <div class="line line-white"></div>   
+                <div class="line line-transparent"></div>   
+            </div>
+        </div>
+        <div class="overlay"></div>
+    </section>
+
+    <section class="section-content">
+        <div class="container">
+            <div class="section-title text-center">
                 
                 <p class="subhead">
                     Bridgelake Associates provides management consulting using data analytics tools. We provide business intelligence, predictive analytics and data discovery for companies that want to have better insights into their data.  We provide cloud based analytics consulting through advisory services, big data analytics, dashboards and algorithms.  We use various and current big data analytic tools to provide unparalleled insights to companies in various industries.
